--- a/themes/hugo-geekdoc/i18n/en.yaml
+++ b/themes/hugo-geekdoc/i18n/en.yaml
@@ -1,7 +1,9 @@
 ---
+edit_page: Edit page
+
 nav_navigation: Navigation
 nav_tags: Tags
-# nav_more: More
+nav_more: More
 nav_top: Back to top
 
 form_placeholder_search: Search
